--- a/backend/package.json
+++ b/backend/package.json
@@ -25,11 +25,13 @@
     "dotenv": "16.3.1",
     "ethers": "^6.15.0",
     "express": "4.18.2",
+    "ffjavascript": "^0.3.1",
     "hardhat": "^2.25.0",
     "helmet": "7.0.0",
     "jsonwebtoken": "9.0.2",
     "morgan": "1.10.0",
     "pg": "8.11.3",
+    "snarkjs": "^0.7.5",
     "web3": "^4.16.0"
   },
   "devDependencies": {
